--- a/01-Test/style.css
+++ b/01-Test/style.css
@@ -192,3 +192,18 @@ h2::before {
 .info-link {
   display: block;
 }
+
+article {
+  display: grid;
+  grid-template-columns: 250px 1fr 1fr;
+  column-gap: 30px;
+  align-items: center;
+}
+
+h2 {
+  grid-column: 1 / -1;
+}
+
+button {
+  grid-column: 1 / -1;
+}
