--- a/05-Design/style.css
+++ b/05-Design/style.css
@@ -57,6 +57,7 @@ h2 {
   font-weight: 500;
 
   display: inline-block;
+  border-radius: 100px;
 }
 
 .btn:hover,
@@ -72,6 +73,10 @@ h2 {
 .btn--small {
   font-size: 14px;
   padding: 8px 12px;
+}
+
+img {
+  border-radius: 12px;
 }
 
 /* ------------------------ */
@@ -95,6 +100,8 @@ h1 {
   font-size: 44px;
   line-height: 1.1;
   letter-spacing: -1px;
+
+  /* text-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2); */
 }
 
 .header-text {
@@ -130,6 +137,7 @@ img {
   background-color: #087f5b;
   color: #fff;
   padding: 24px;
+  border-radius: 12px;
 }
 
 .testimonial-box {
@@ -150,6 +158,16 @@ img {
 }
 
 /* CHAIRS */
+.chair {
+  box-shadow: 0px 20px 30px 0px rgba(0, 0, 0, 0.07);
+  border-radius: 12px;
+}
+
+.chair img {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
 .chair-box {
   padding: 24px;
 }
