--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -1,5 +1,5 @@
 /*******************************/
-/* HEADER */
+/* HEADER SECTION */
 /*******************************/
 
 .header {
@@ -18,7 +18,7 @@
 }
 
 /*******************************/
-/* NAVIGATION */
+/* NAVIGATION SECTION */
 /*******************************/
 
 .main-nav-list {
@@ -119,7 +119,36 @@
 }
 
 /*******************************/
-/* HOW IT WORKS */
+/* FEATURED IN SECTION */
+/*******************************/
+
+.section-featured {
+  padding: 4.8rem 0 3.2rem 0;
+}
+
+.heading-featured-in {
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  letter-spacing: 0.75px;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 2.4rem;
+  color: #888;
+}
+
+.logos {
+  display: flex;
+  justify-content: space-around;
+}
+
+.logos img {
+  height: 3.2rem;
+  filter: brightness(0);
+  opacity: 50%;
+}
+
+/*******************************/
+/* HOW IT WORKS SECTION */
 /*******************************/
 
 .section-how {
