--- a/07-Omnifood-Desktop/css/general.css
+++ b/07-Omnifood-Desktop/css/general.css
@@ -26,13 +26,14 @@ Paragraph default: 1.6
 - Primary: #e67e22
 - Tints: #fdf2e9, #fae5d3
 - Shades: #cf711f
-- Accents: 
+- Accents: #51cf66
 - Greys: #555 , #333
 
 --- 05 SHADOWS
 
 --- 06 BORDER-RADIUS
 Default: 9px
+Medium: 11px
 
 --- 07 WHITESPACE
 
@@ -140,7 +141,7 @@ body {
   border-radius: 9px;
 
   /* Put transition on original "state" */
-  transition: background-color 0.3s;
+  transition: all 0.3s;
 }
 
 .btn--full:link,
@@ -170,6 +171,34 @@ body {
   box-shadow: inset 0 0 0 3px #fff;
 }
 
+.link:link,
+.link:visited {
+  display: inline-block;
+  color: #e67e22;
+  text-decoration: none;
+  padding-bottom: 0.2rem;
+  border-bottom: 1px solid currentColor;
+  transition: all 0.3s;
+}
+
+.link:hover,
+.link:active {
+  color: #cf711f;
+  border-bottom: 1px solid transparent;
+}
+
 .margin-right-sm {
   margin-right: 1.6rem !important;
+}
+
+.margin-bottom-md {
+  margin-bottom: 4.8rem !important;
+}
+
+.center-text {
+  text-align: center;
+}
+
+strong {
+  font-weight: 500;
 }
