--- a/07-Omnifood-Desktop/css/general.css
+++ b/07-Omnifood-Desktop/css/general.css
@@ -27,7 +27,10 @@ Paragraph default: 1.6
 - Tints: #fdf2e9, #fae5d3
 - Shades: #cf711f
 - Accents: #51cf66
-- Greys: #555 , #333
+- Greys: 
+#555 
+#333
+#6f6f6f (lightest grey allowed on #fdf2e9)
 
 --- 05 SHADOWS
 
@@ -77,6 +80,16 @@ body {
   display: grid;
   column-gap: 6.4rem;
   row-gap: 9.6rem;
+
+  /* margin-bottom: 9.6rem; */
+}
+
+/* .grid:last-child {
+  margin-bottom: 0;
+} */
+
+.grid:not(:last-child) {
+  margin-bottom: 9.6rem;
 }
 
 .grid--2-cols {
@@ -185,6 +198,26 @@ body {
 .link:active {
   color: #cf711f;
   border-bottom: 1px solid transparent;
+}
+
+.list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+}
+
+.list-item {
+  font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+}
+
+.list-icon {
+  height: 3rem;
+  width: 3rem;
+  color: #e67e22;
 }
 
 .margin-right-sm {
