--- a/08-Omnifood-Responsive/css/general.css
+++ b/08-Omnifood-Responsive/css/general.css
@@ -69,6 +69,7 @@ html {
   /* 10px / 16px = 0.625 = 62.5% */
   /* Percentage of user's browser font-size setting */
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
@@ -76,6 +77,9 @@ body {
   line-height: 1;
   font-weight: 400;
   color: #555;
+
+  /* Only works if there is nothing absolutely positioned in relation to the body */
+  overflow-x: hidden;
 }
 
 /**************************/
